# wx-video-account-notes

./: .gitignore  CHANGELOG.md  README.md  ocr-asr-evaluation.md  目录说明.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
plugins/wx-video-account-notes/skills/wx-video-account-notes/: SKILL.md  pyproject.toml
plugins/wx-video-account-notes/skills/wx-video-account-notes/examples/: basic-link.md  custom-output-dir.md
plugins/wx-video-account-notes/skills/wx-video-account-notes/resources/: model-note-template.md
plugins/wx-video-account-notes/skills/wx-video-account-notes/runtime/: _retry.py  asr_runner.py  assets_manifest.json  bootstrap.py  compose_note.py  download_video.py  media_extract.py  ocr_runner.py  pipeline.py  resolve_link.py
plugins/wx-video-account-notes/skills/wx-video-account-notes/runtime/tests/: test_asr_runner.py  test_bootstrap.py  test_compose_note.py  test_docs_layout.py  test_media_extract.py  test_ocr_runner.py  test_pipeline.py  test_resolve_link.py
plugins/wx-video-account-notes/skills/wx-video-account-notes/scripts/: bootstrap.ps1  common.ps1  invoke_pipeline.ps1  verify_runtime.ps1
plugins/wx-video-account-notes/skills/wx-video-account-notes/tests/: evals.json  test-cases.md
skills/wx-video-account-notes/: SKILL.md
wx-video-account-notes/: SKILL.md
wx-video-account-notes/examples/: custom-output-dir.md
wx-video-account-notes/resources/: model-note-template.md
wx-video-account-notes/runtime/: assets_manifest.json  bootstrap.py  download_video.py  ocr_runner.py  (+4 more)
(+7 files in other folders)
