[project]
name = "wx-video-account-notes-runtime"
version = "0.2.3"
description = "Runtime helpers for the wx-video-account-notes Codex skill."
requires-python = ">=3.13,<3.14"
dependencies = [
    "httpx==0.28.1",
    "rapidocr-onnxruntime==1.4.4",
    "faster-whisper==1.2.1",
    "huggingface-hub==1.21.0",
    "tqdm==4.68.3",
    "Pillow==12.2.0",
]

[tool.uv]
package = false
